kubernetes/base/apps/idoit/namespace.yaml
---
# i-doit Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: idoit
  labels:
    app.kubernetes.io/name: idoit
    app.kubernetes.io/managed-by: argocd
